<resources>
    <string name="app_name">Login APP with Firebase</string>
    <string name="lockins">LOCKINS</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="register_user">Register User</string>
    <string name="email">Email</string>
</resources>